--- a/app/src/main/res/layout/activity_park_search.xml
+++ b/app/src/main/res/layout/activity_park_search.xml
@@ -10,42 +10,65 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textview_search_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textview_search_1"
-            android:text="@string/search_text1"
+            android:layout_gravity="center"
+            android:text="@string/search_text_main"
             android:textColor="@android:color/black"
             android:textSize="25sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textview_search_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textview_search_2"
-                    android:text="@string/search_text2"
+                    android:padding="0dp"
+                    android:text="@string/search_text_address"
                     android:textColor="@android:color/black"
-                    android:textSize="17sp"
-                    android:padding="0dp"/>
+                    android:textSize="15sp"/>
 
                 <EditText
+                    android:id="@+id/editext_search_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editext_search_address"
+                    android:maxLines="1"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textview_search_area_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:text="@string/search_text_area_label"
+                    android:textColor="@android:color/black"
+                    android:textSize="15sp"/>
+
+                <EditText
+                    android:id="@+id/editext_search_area_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:maxLines="1"/>
             </LinearLayout>
 
@@ -53,41 +76,100 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textview_search_start_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textview_search_3"
-                    android:text="@string/search_text3"
+                    android:padding="0dp"
+                    android:text="@string/search_text_start_time"
                     android:textColor="@android:color/black"
-                    android:textSize="17sp"
-                    android:padding="0dp"/>
+                    android:textSize="15sp"/>
 
                 <EditText
+                    android:id="@+id/editext_search_start_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editext_search_time"
-                    android:maxLines="1"
-                    android:focusable="false"/>
+                    android:focusable="false"
+                    android:maxLines="1"/>
             </LinearLayout>
 
-            <ImageButton
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/button_search"
-                android:scaleType="fitCenter"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textview_search_end_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:text="@string/search_text_end_time"
+                    android:textColor="@android:color/black"
+                    android:textSize="15sp"/>
+
+                <EditText
+                    android:id="@+id/editext_search_end_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:maxLines="1"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="6">
+
+            <fragment
+                android:id="@+id/fragment_park_search"
+                android:name="com.google.android.gms.maps.MapFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="5"
+                tools:layout="@layout/fragment_placeholder_park_search"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:weightSum="3">
+
+                <ImageButton
+                    android:id="@+id/imagebutton_search_free"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/button_search_free"/>
+
+                <ImageButton
+                    android:id="@+id/imagebutton_search_paid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/button_search_paid"/>
+
+                <ImageButton
+                    android:id="@+id/imagebutton_search_parking_lot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/button_search_parklot"/>
+            </LinearLayout>
 
         </LinearLayout>
-        <fragment
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/fragment_park_search"
-            android:layout_marginBottom="60dp"
-            android:name="com.google.android.gms.maps.MapFragment"/>
 
     </LinearLayout>
 
