park marking - kinda complete, can add parking on two days (night to morning second day). park searching - free is complete, need to add paid and parking lots. markers - need to add buttons to navigate to desired parking and a button to report a parking. todo: class diagrams and wireframes.

--- a/app/src/main/res/layout/activity_park_mark.xml
+++ b/app/src/main/res/layout/activity_park_mark.xml
@@ -6,9 +6,276 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.omeryaari.parke.ui.ParkMarkActivity">
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </GridLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textview_mark_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/search_text_main"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/textview_mark_parking_type"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/mark_parking_type_text"
+                    android:textColor="@android:color/black"
+                    android:textSize="15sp"/>
+
+                <Spinner
+                    android:id="@+id/spinner_parking_mark_type"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+                </Spinner>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearlayout_mark_below_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:visibility="invisible">
+
+                <LinearLayout
+                    android:id="@+id/linearlayout_mark_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/textview_parking_mark_day"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/mark_parking_day_text"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"/>
+
+                    <Spinner
+                        android:id="@+id/spinner_parking_mark_day"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+                    </Spinner>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearlayout_mark_start_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/textview_parking_mark_start_time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:text="@string/mark_parking_start_time_text"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"/>
+
+                    <EditText
+                        android:id="@+id/editext_mark_start_time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:focusable="false"
+                        android:maxLines="1"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearlayout_mark_end_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/textview_parking_mark_end_time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:text="@string/mark_parking_end_time_text"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"/>
+
+                    <EditText
+                        android:id="@+id/editext_mark_end_time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:focusable="false"
+                        android:maxLines="1"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearlayout_mark_rules"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/textview_parking_mark_rules"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:text="@string/mark_parking_current_rules_text"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"/>
+
+                    <Spinner
+                        android:id="@+id/spinner_parking_mark_rules"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1">
+                    </Spinner>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="4">
+
+                    <ImageButton
+                        android:id="@+id/imagebutton_mark_add"
+                        android:layout_width="80dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:scaleType="fitStart"
+                        android:src="@drawable/button_add"/>
+
+                    <LinearLayout
+                        android:id="@+id/linearlayout_mark_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <TextView
+                            android:id="@+id/textview_parking_mark_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/mark_parking_price_text"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"/>
+
+                        <EditText
+                            android:id="@+id/editext_mark_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:inputType="number"
+                            android:maxLength="3"
+                            android:maxLines="1"/>
+
+                    </LinearLayout>
+
+                    <CheckBox
+                        android:id="@+id/parking_mark_residents_checkbox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/mark_parking_residents_text"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:checked="false"
+                        android:textSize="15sp"/>
+
+                    <LinearLayout
+                        android:id="@+id/linearlayout_mark_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <TextView
+                            android:id="@+id/textview_parking_mark_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/mark_parking_label_text"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"/>
+
+                        <EditText
+                            android:id="@+id/editext_mark_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:inputType="number"
+                            android:maxLength="3"
+                            android:maxLines="1"/>
+                        </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="6">
+
+            <fragment
+                android:id="@+id/fragment_park_mark_map"
+                android:name="com.google.android.gms.maps.MapFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="5"
+                tools:layout="@layout/fragment_placeholder_map"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/imagebutton_parking_mark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/button_mark"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
