--- a/app/src/main/res/layout/activity_park_search.xml
+++ b/app/src/main/res/layout/activity_park_search.xml
@@ -8,36 +8,40 @@
     tools:context="com.omeryaari.parke.ui.ParkSearchActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_search_main"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/search_text_main"
-            android:textColor="@android:color/black"
-            android:textSize="25sp"/>
+            android:orientation="vertical"
+            android:layout_marginBottom="5dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            <TextView
+                android:id="@+id/textview_search_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/search_text_main"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <TextView
                     android:id="@+id/textview_search_address"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="0dp"
                     android:text="@string/search_text_address"
                     android:textColor="@android:color/black"
@@ -45,21 +49,45 @@
 
                 <EditText
                     android:id="@+id/editext_search_address"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxLines="1"/>
+                    android:textSize="15sp"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:maxLength="40"
+                    android:maxLines="2"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="7">
+
+                <TextView
+                    android:id="@+id/textview_search_day"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:padding="0dp"
+                    android:text="@string/search_text_day"
+                    android:textColor="@android:color/black"
+                    android:textSize="15sp"/>
+
+                <Spinner
+                    android:id="@+id/spinner_parking_mark_day"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3">
+                </Spinner>
 
                 <TextView
                     android:id="@+id/textview_search_area_label"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="0dp"
                     android:text="@string/search_text_area_label"
                     android:textColor="@android:color/black"
@@ -67,9 +95,13 @@
 
                 <EditText
                     android:id="@+id/editext_search_area_label"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:textSize="15sp"
                     android:inputType="number"
+                    android:maxLength="3"
                     android:maxLines="1"/>
             </LinearLayout>
 
@@ -77,22 +109,29 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <TextView
                     android:id="@+id/textview_search_start_time"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="0dp"
+                    android:layout_weight="1"
+
+
                     android:text="@string/search_text_start_time"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"/>
 
                 <EditText
                     android:id="@+id/editext_search_start_time"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:textSize="15sp"
                     android:focusable="false"
                     android:maxLines="1"/>
             </LinearLayout>
@@ -100,29 +139,33 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <TextView
-                    android:id="@+id/textview_search_end_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:padding="0dp"
+                    android:id="@+id/textview_search_end_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:text="@string/search_text_end_time"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"/>
 
                 <EditText
                     android:id="@+id/editext_search_end_time"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:textSize="15sp"
                     android:focusable="false"
                     android:maxLines="1"/>
             </LinearLayout>
         </LinearLayout>
-
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="6">
@@ -134,11 +177,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="5"
-                tools:layout="@layout/fragment_placeholder_park_search"/>
+                tools:layout="@layout/fragment_placeholder_map"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_weight="1"
                 android:weightSum="3">
 
@@ -171,7 +214,5 @@
             </LinearLayout>
 
         </LinearLayout>
-
     </LinearLayout>
-
 </RelativeLayout>
